updating showprofile to use correct icon

--- a/src/ProjectTemplates/Web.ProjectTemplates/content/ComponentsWebAssembly-CSharp/Client/Shared/NavMenu.CallsMicrosoftGraph.razor
+++ b/src/ProjectTemplates/Web.ProjectTemplates/content/ComponentsWebAssembly-CSharp/Client/Shared/NavMenu.CallsMicrosoftGraph.razor
@@ -26,7 +26,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="showProfile">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Show Profile
+                <span class="oi oi-person" aria-hidden="true"></span> Show Profile
             </NavLink>
         </div>
     </nav>
