--- a/src/ProjectTemplates/Web.ProjectTemplates/content/BlazorServerWeb-CSharp/Shared/NavMenu.CallsMicrosoftGraph.razor
+++ b/src/ProjectTemplates/Web.ProjectTemplates/content/BlazorServerWeb-CSharp/Shared/NavMenu.CallsMicrosoftGraph.razor
@@ -26,7 +26,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="showprofile">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Show profile
+                <span class="oi oi-person" aria-hidden="true"></span> Show profile
             </NavLink>
         </div>
     </nav>
