--- a/src/Installers/Windows/WindowsHostingBundle/DotNetCore.wxs
+++ b/src/Installers/Windows/WindowsHostingBundle/DotNetCore.wxs
@@ -2,6 +2,24 @@
 <?include ..\AspNetCoreModule-Setup\IIS-Setup\include.wxi ?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" xmlns:util="http://schemas.microsoft.com/wix/UtilExtension">
     <Fragment>
+        <util:ProductSearch Id="DotNetRedistLtsProductSearch_x86"
+                            Condition="(NativeMachine=&quot;$(var.NativeMachine_x86)&quot;)"
+                            ProductCode="$(var.DotNetRedistLtsInstallerProductCodex86)"
+                            Result="version"
+                            Variable="DotNetRedistLtsProductVersion_x86" />
+
+        <util:ProductSearch Id="DotNetRedistLtsProductSearch_x64"
+                            Condition="(NativeMachine=&quot;$(var.NativeMachine_x64)&quot;)"
+                            ProductCode="$(var.DotNetRedistLtsInstallerProductCodex64)"
+                            Result="version"
+                            Variable="DotNetRedistLtsProductVersion_x64" />
+
+        <util:ProductSearch Id="DotNetRedistLtsProductSearch_arm64"
+                            Condition="(NativeMachine=&quot;$(var.NativeMachine_arm64)&quot;)"
+                            ProductCode="$(var.DotNetRedistLtsInstallerProductCodearm64)"
+                            Result="version"
+                            Variable="DotNetRedistLtsProductVersion_arm64" />
+
         <PackageGroup Id="PG_DOTNET_REDIST_LTS_BUNDLE">
             <RollbackBoundary Id="RB_DOTNET_REDIST_LTS_BUNDLE" />
 
@@ -25,7 +43,7 @@
                         InstallCondition="(NativeMachine=&quot;$(var.NativeMachine_x64)&quot;) AND (NOT OPT_NO_RUNTIME OR OPT_NO_RUNTIME=&quot;0&quot;)"
                         InstallCommand="/quiet /norestart"
                         RepairCommand="/quiet /repair"
-                        Permanent="yes"
+                        UninstallCommand="/quiet /uninstall"
                         DetectCondition="DotNetRedistLtsProductVersion_x64 = v$(var.DotNetRedistLtsInstallerProductVersionx64)">
             </ExePackage>
 
@@ -37,30 +55,9 @@
                         InstallCondition="(NOT OPT_NO_RUNTIME OR OPT_NO_RUNTIME=&quot;0&quot;) AND (NOT OPT_NO_X86 OR OPT_NO_X86=&quot;0&quot;)"
                         InstallCommand="/quiet /norestart"
                         RepairCommand="/quiet /repair"
-                        Permanent="yes"
+                        UninstallCommand="/quiet /uninstall"
                         DetectCondition="DotNetRedistLtsProductVersion_x86 = v$(var.DotNetRedistLtsInstallerProductVersionx86)">
             </ExePackage>
         </PackageGroup>
-    </Fragment>
-
-    <Fragment>
-        <util:ProductSearch Id="DotNetRedistLtsProductSearch_x86"
-                            Condition="(NativeMachine=&quot;$(var.NativeMachine_x86)&quot;)"
-                            ProductCode="$(var.DotNetRedistLtsInstallerProductCodex86)"
-                            Result="version"
-                            Variable="DotNetRedistLtsProductVersion_x86" />
-
-        <util:ProductSearch Id="DotNetRedistLtsProductSearch_x64"
-                            Condition="(NativeMachine=&quot;$(var.NativeMachine_x64)&quot;)"
-                            ProductCode="$(var.DotNetRedistLtsInstallerProductCodex64)"
-                            Result="version"
-                            Variable="DotNetRedistLtsProductVersion_x64" />
-
-        <util:ProductSearch Id="DotNetRedistLtsProductSearch_arm64"
-                            Condition="(NativeMachine=&quot;$(var.NativeMachine_arm64)&quot;)"
-                            ProductCode="$(var.DotNetRedistLtsInstallerProductCodearm64)"
-                            Result="version"
-                            Variable="DotNetRedistLtsProductVersion_arm64" />
-        
     </Fragment>
 </Wix>
