--- a/src/Installers/Windows/WindowsHostingBundle/SharedFramework.wxs
+++ b/src/Installers/Windows/WindowsHostingBundle/SharedFramework.wxs
@@ -2,6 +2,24 @@
 <?include ..\AspNetCoreModule-Setup\IIS-Setup\include.wxi ?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" xmlns:util="http://schemas.microsoft.com/wix/UtilExtension">
     <Fragment>
+        <util:ProductSearch Id="SharedFxRedistProductSearch_x86"
+                            Condition="(NativeMachine=&quot;$(var.NativeMachine_x86)&quot;)"
+                            ProductCode="$(var.SharedFxInstallerProductCodex86)"
+                            Result="version"
+                            Variable="SharedFxRedistProductVersion_x86" />
+
+        <util:ProductSearch Id="SharedFxRedistProductSearch_x64"
+                            Condition="(NativeMachine=&quot;$(var.NativeMachine_x64)&quot;)"
+                            ProductCode="$(var.SharedFxInstallerProductCodex64)"
+                            Result="version"
+                            Variable="SharedFxRedistProductVersion_x64" />
+
+        <util:ProductSearch Id="SharedFxRedistProductSearch_arm64"
+                            Condition="(NativeMachine=&quot;$(var.NativeMachine_arm64)&quot;)"
+                            ProductCode="$(var.SharedFxInstallerProductCodearm64)"
+                            Result="version"
+                            Variable="SharedFxRedistProductVersion_arm64" />
+                            
         <PackageGroup Id="PG_SHAREDFX_REDIST_BUNDLE">
             <RollbackBoundary Id="RB_SHAREDFX_REDIST_BUNDLE" />
 
@@ -25,7 +43,7 @@
                         InstallCondition="(NativeMachine=&quot;$(var.NativeMachine_x64)&quot;) AND (NOT OPT_NO_SHAREDFX OR OPT_NO_SHAREDFX=&quot;0&quot;)"
                         InstallCommand="/quiet /norestart"
                         RepairCommand="/quiet /repair"
-                        Permanent="yes"
+                        UninstallCommand="/quiet /uninstall"
                         DetectCondition="SharedFxRedistProductVersion_x64 = v$(var.SharedFxInstallerProductVersionx64)">
             </ExePackage>
 
@@ -37,30 +55,10 @@
                         InstallCondition="(NOT OPT_NO_SHAREDFX OR OPT_NO_SHAREDFX=&quot;0&quot;) AND (NOT OPT_NO_X86 OR OPT_NO_X86=&quot;0&quot;)"
                         InstallCommand="/quiet /norestart"
                         RepairCommand="/quiet /repair"
-                        Permanent="yes"
+                        UninstallCommand="/quiet /uninstall"
                         DetectCondition="SharedFxRedistProductVersion_x86 = v$(var.SharedFxInstallerProductVersionx86)">
             </ExePackage>
             
         </PackageGroup>
-    </Fragment>
-
-    <Fragment>
-        <util:ProductSearch Id="SharedFxRedistProductSearch_x86"
-                            Condition="(NativeMachine=&quot;$(var.NativeMachine_x86)&quot;)"
-                            ProductCode="$(var.SharedFxInstallerProductCodex86)"
-                            Result="version"
-                            Variable="SharedFxRedistProductVersion_x86" />
-
-        <util:ProductSearch Id="SharedFxRedistProductSearch_x64"
-                            Condition="(NativeMachine=&quot;$(var.NativeMachine_x64)&quot;)"
-                            ProductCode="$(var.SharedFxInstallerProductCodex64)"
-                            Result="version"
-                            Variable="SharedFxRedistProductVersion_x64" />
-
-        <util:ProductSearch Id="SharedFxRedistProductSearch_arm64"
-                            Condition="(NativeMachine=&quot;$(var.NativeMachine_arm64)&quot;)"
-                            ProductCode="$(var.SharedFxInstallerProductCodearm64)"
-                            Result="version"
-                            Variable="SharedFxRedistProductVersion_arm64" />
     </Fragment>
 </Wix>
