Address more feedback from review

--- a/src/Http/Http.Abstractions/src/RouteHandlerInvocationContextOfT.Generated.tt
+++ b/src/Http/Http.Abstractions/src/RouteHandlerInvocationContextOfT.Generated.tt
@@ -11,11 +11,13 @@ int[] arities = Enumerable.Range(1, 10).ToArray();
 #nullable enable
 
 using System.Collections;
+using System.CodeDom.Compiler;
 
 namespace Microsoft.AspNetCore.Http;
 
 <# foreach (var arity in arities) { #>
-internal sealed class RouteHandlerInvocationContext<<# foreach (var argumentCount in Enumerable.Range(0, arity)) { #>T<#=argumentCount#><# if (argumentCount < arity - 1) { #>, <# } #><# } #>> : RouteHandlerInvocationContextBase, IList<object?>
+[GeneratedCode("TextTemplatingFileGenerator", "")]
+internal sealed class RouteHandlerInvocationContext<<# foreach (var argumentCount in Enumerable.Range(0, arity)) { #>T<#=argumentCount#><# if (argumentCount < arity - 1) { #>, <# } #><# } #>> : RouteHandlerInvocationContext, IList<object?>
 {
     internal RouteHandlerInvocationContext(HttpContext httpContext, <# foreach (var argumentCount in Enumerable.Range(0, arity)) { #>T<#=argumentCount#> arg<#=argumentCount#><# if (argumentCount < arity - 1) { #>, <# } #><# } #>)
     {
