--- a/src/Components/test/testassets/BasicTestApp/RouterTest/Links.razor
+++ b/src/Components/test/testassets/BasicTestApp/RouterTest/Links.razor
@@ -9,8 +9,11 @@
 <ul>
     <li><NavLink href="/subdir/" Match=NavLinkMatch.All>Default (matches all)</NavLink></li>
     <li><NavLink href="" Match=NavLinkMatch.All>Default with base-relative URL (matches all)</NavLink></li>
+    <li><NavLink href="/subdir" Match=NavLinkMatch.All>Default, no trailing slash (matches all)</NavLink></li>
     <li><NavLink href="/subdir/?abc=123">Default with query</NavLink></li>
+    <li><NavLink href="/subdir?abc=123">Default with query, no trailing slash</NavLink></li>
     <li><NavLink href="/subdir/#blah">Default with hash</NavLink></li>
+    <li><NavLink href="/subdir#blah">Default with hash, no trailing slash</NavLink></li>
     <li><NavLink href="/subdir/Default.html">With extension</NavLink></li>
     <li><NavLink href="/subdir/Other">Other</NavLink></li>
     <li><NavLink href="Other" Match=NavLinkMatch.All>Other with base-relative URL (matches all)</NavLink></li>
